<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom"
        android:orderInCategory="0"
        >

        <menu>

            <item
                android:id="@+id/sort_name"
                android:title="@string/sort_name"
                android:orderInCategory="0"
                />


            <item
                android:id="@+id/sort_avg"
                android:title="@string/sort_avg"
                android:orderInCategory="0"
                />

            <item
                android:id="@+id/sort_date"
                android:title="@string/sort_date"
                android:orderInCategory="0"
                />

            <item
                android:id="@+id/sort_sides"
                android:title="@string/sort_sides"
                android:orderInCategory="0"
                />

            <item
                android:id="@+id/sort_amount"
                android:title="@string/sort_amount"
                android:orderInCategory="0"
                />

        </menu>

    </item>

</menu>