<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="club.psarda.dynamicinstantcircumengine.UI.Fragments.SettingsFragment">

    <RelativeLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <TableLayout
                android:layout_marginTop="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TableRow
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/settings_shake_seek_bar_title"
                        style="@style/NormalText"
                        />

                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    >
                    <RelativeLayout
                        android:layout_weight="1"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            style="@style/SubtitleText"
                            android:text="@string/settings_shake_seek_bar_min"
                            android:layout_marginStart="10sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            style="@style/SubtitleText"
                            android:text="@string/settings_shake_seek_bar_max"
                            android:layout_marginEnd="10sp"
                            />

                    </RelativeLayout>

                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    >
                    <SeekBar
                        android:layout_weight="1"
                        android:id="@+id/settings_shake_seek_bar"
                        android:layout_width="match_parent"
                        android:layout_height="30sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginLeft="10sp"
                        />
                </TableRow>

            </TableLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/settings_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                android:scrollbars="vertical"
                />

        </LinearLayout>

        <android.support.design.widget.CoordinatorLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context="info.androidhive.fab.MainActivity"
            >

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/save_fab"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:background="@color/PrimaryColor"
                android:src="@android:drawable/ic_menu_save" />

        </android.support.design.widget.CoordinatorLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/settings_loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/NormalText"
            android:text="@string/settings_must_sign_in"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:paddingStart="30sp"
            android:paddingEnd="30sp"
            android:visibility="gone"
            />

    </RelativeLayout>



</FrameLayout>
